added pages of gallery

--- a/index.html
+++ b/index.html
@@ -141,57 +141,14 @@ data-shr-siteid="8972e53157d800c8454cbe7c0a293687" async="async"></script>
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-md-4 col-sm-6 col-xxs-12">
-					<a href="images/1.jpg" class="fh5co-project-item image-popup to-animate">
+				<div class="col-md-6 col-sm-12 col-xs-12">
+					<a href="first-event.html" class="fh5co-project-item to-animate">
 						<img src="images/1.jpg" alt="Image" class="img-responsive">
 					</a>
 				</div>
-				<div class="col-md-4 col-sm-6 col-xxs-12">
-					<a href="images/2.jpg" class="fh5co-project-item image-popup to-animate">
+				<div class="col-md-6 col-sm-12 col-xs-12">
+					<a href="second-event.html" class="fh5co-project-item to-animate">
 						<img src="images/2.jpg" alt="Image" class="img-responsive">
-					</a>
-				</div>
-
-				<div class="col-md-4 col-sm-6 col-xxs-12">
-					<a href="images/3.jpg" class="fh5co-project-item image-popup to-animate">
-						<img src="images/3.jpg" alt="Image" class="img-responsive">
-					</a>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-md-4 col-sm-6 col-xxs-12">
-					<a href="images/4.jpg" class="fh5co-project-item image-popup to-animate">
-						<img src="images/4.jpg" alt="Image" class="img-responsive">
-					</a>
-				</div>
-				
-
-				<div class="col-md-4 col-sm-6 col-xxs-12">
-					<a href="images/5.jpg" class="fh5co-project-item image-popup to-animate">
-						<img src="images/5.jpg" alt="Image" class="img-responsive">
-					</a>
-				</div>
-				<div class="col-md-4 col-sm-6 col-xxs-12">
-					<a href="images/6.jpg" class="fh5co-project-item image-popup to-animate">
-						<img src="images/6.jpg" alt="Image" class="img-responsive">
-					</a>
-				</div>
-			</div>
-				
-			<div class="row">
-				<div class="col-md-4 col-sm-6 col-xxs-12">
-					<a href="images/7.jpg" class="fh5co-project-item image-popup to-animate">
-						<img src="images/7.jpg" alt="Image" class="img-responsive">
-					</a>
-				</div>
-				<div class="col-md-4 col-sm-6 col-xxs-12">
-					<a href="images/8.jpg" class="fh5co-project-item image-popup to-animate">
-						<img src="images/8.jpg" alt="Image" class="img-responsive">
-					</a>
-				</div>
-				<div class="col-md-4 col-sm-6 col-xxs-12">
-					<a href="images/9.jpg" class="fh5co-project-item image-popup to-animate">
-						<img src="images/9.jpg" alt="Image" class="img-responsive">
 					</a>
 				</div>
 			</div>
