--- a/first-event.html
+++ b/first-event.html
@@ -60,7 +60,7 @@ support of Microsoft at back , and your good wishes we wish to energize today's 
 data-shr-siteid="8972e53157d800c8454cbe7c0a293687" async="async"></script>
 	</head>
 	<body>
-	<header role="banner" id="fh5co-header">
+	<header role="banner" id="fh5co-header" >
 			<div class="container">
 				<!-- <div class="row"> -->
 			    <nav class="navbar navbar-default">
@@ -70,10 +70,10 @@ data-shr-siteid="8972e53157d800c8454cbe7c0a293687" async="async"></script>
 		         <a href="http://www.microsoftlpu.com"><img src="images/logo.png" width="160" height="60"></a>
 		        </div>
 		        <div id="navbar" class="navbar-collapse collapse">
-		          <ul class="nav navbar-nav navbar-right">
-		            <li class="active"><a href="#" data-nav-section="home"><span>Home</span></a></li>
+		          <ul class="nav navbar-nav navbar-right navbar-gallery">
+		            <li><a href="#" data-nav-section="home"><span>Home</span></a></li>
 		            <li><a href="#" data-nav-section="about"><span>About</span></a></li>
-		            <li><a href="#" data-nav-section="gallery"><span>Gallery</span></a></li>
+		            <li class="active"><a href="#" data-nav-section="gallery"><span>Gallery</span></a></li>
 		            <li><a href="#" data-nav-section="event"><span>Upcoming Event</span></a></li>
 		            <li><a href="team.html" onclick="team()"><span>Team</span></a></li>
 		            <li><a href="#" data-nav-section="contact"><span>Contact Us</span></a></li>
@@ -84,70 +84,73 @@ data-shr-siteid="8972e53157d800c8454cbe7c0a293687" async="async"></script>
 		  </div>
 	</header>
 
-	<section id="fh5co-wor" data-section="gallery">
+	<section style="padding-top: 130px;">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12 section-heading text-center">
-					<h2 class="to-animate">Gallery</h2>
+					<h2>Gallery</h2>
 					<div class="row">
-						<div class="col-md-8 col-md-offset-2 subtext to-animate">
-							<h3>Some Glimpes of Our Event</h3>
+						<div class="col-md-8 col-md-offset-2 subtext">
+							<h3>First Event</h3>
 						</div>
 					</div>
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-md-4 col-sm-6 col-xxs-12">
+				<div class="col-md-4 col-sm-4 col-xs-12">
 					<a href="images/1.jpg" class="fh5co-project-item image-popup to-animate">
-						<img src="images/1.jpg" alt="Image" class="img-responsive">
+						<img src="images/1.jpg" alt="Image" class="gallery-img img-responsive">
 					</a>
 				</div>
-				<div class="col-md-4 col-sm-6 col-xxs-12">
+				<div class="col-md-4 col-sm-4 col-xs-12">
 					<a href="images/2.jpg" class="fh5co-project-item image-popup to-animate">
-						<img src="images/2.jpg" alt="Image" class="img-responsive">
+						<img src="images/2.jpg" alt="Image" class="gallery-img img-responsive">
 					</a>
 				</div>
 
-				<div class="col-md-4 col-sm-6 col-xxs-12">
+				<div class="col-md-4 col-sm-4 col-xs-12">
 					<a href="images/3.jpg" class="fh5co-project-item image-popup to-animate">
-						<img src="images/3.jpg" alt="Image" class="img-responsive">
+						<img src="images/3.jpg" alt="Image" class="gallery-img img-responsive">
 					</a>
 				</div>
 			</div>
+			<div class="space"></div>
+			<div class="space"></div>
 			<div class="row">
-				<div class="col-md-4 col-sm-6 col-xxs-12">
+				<div class="col-md-4 col-sm-4 col-xs-12">
 					<a href="images/4.jpg" class="fh5co-project-item image-popup to-animate">
-						<img src="images/4.jpg" alt="Image" class="img-responsive">
+						<img src="images/4.jpg" alt="Image" class="gallery-img img-responsive">
 					</a>
 				</div>
 				
 
-				<div class="col-md-4 col-sm-6 col-xxs-12">
+				<div class="col-md-4 col-sm-4 col-xs-12">
 					<a href="images/5.jpg" class="fh5co-project-item image-popup to-animate">
-						<img src="images/5.jpg" alt="Image" class="img-responsive">
+						<img src="images/5.jpg" alt="Image" class="gallery-img img-responsive">
 					</a>
 				</div>
-				<div class="col-md-4 col-sm-6 col-xxs-12">
+				<div class="col-md-4 col-sm-4 col-xs-12">
 					<a href="images/6.jpg" class="fh5co-project-item image-popup to-animate">
-						<img src="images/6.jpg" alt="Image" class="img-responsive">
+						<img src="images/6.jpg" alt="Image" class="gallery-img img-responsive">
 					</a>
 				</div>
 			</div>
-				
+			<div class="space"></div>
+			<div class="space"></div>				
 			<div class="row">
-				<div class="col-md-4 col-sm-6 col-xxs-12">
+				<div class="col-md-4 col-sm-4 col-xs-12">
 					<a href="images/7.jpg" class="fh5co-project-item image-popup to-animate">
-						<img src="images/7.jpg" alt="Image" class="img-responsive">
+						<img src="images/7.jpg" alt="Image" class="gallery-img img-responsive">
 					</a>
 				</div>
-				<div class="col-md-4 col-sm-6 col-xxs-12">
+				<div class="col-md-4 col-sm-4 col-xs-12">
 					<a href="images/8.jpg" class="fh5co-project-item image-popup to-animate">
-						<img src="images/8.jpg" alt="Image" class="img-responsive">
+						<img src="images/8.jpg" alt="Image" class="gallery-img img-responsive">
 					</a>
 				</div>
-				<div class="col-md-4 col-sm-6 col-xxs-12">
+				<div class="col-md-4 col-sm-4 col-xs-12">
 					<a href="images/9.jpg" class="fh5co-project-item image-popup to-animate">
-						<img src="images/9.jpg" alt="Image" class="img-responsive">
+						<img src="images/9.jpg" alt="Image" class="gallery-img img-responsive">
 					</a>
 				</div>
 			</div>
