--- a/second-event.html
+++ b/second-event.html
@@ -71,12 +71,12 @@ data-shr-siteid="8972e53157d800c8454cbe7c0a293687" async="async"></script>
 		        </div>
 		        <div id="navbar" class="navbar-collapse collapse">
 		          <ul class="nav navbar-nav navbar-right navbar-gallery">
-		            <li><a href="#" data-nav-section="home"><span>Home</span></a></li>
-		            <li><a href="#" data-nav-section="about"><span>About</span></a></li>
-		            <li class="active"><a href="#" data-nav-section="gallery"><span>Gallery</span></a></li>
-		            <li><a href="#" data-nav-section="event"><span>Upcoming Event</span></a></li>
-		            <li><a href="team.html" onclick="team()"><span>Team</span></a></li>
-		            <li><a href="#" data-nav-section="contact"><span>Contact Us</span></a></li>
+		            <li><a href="http://www.microsoftlpu.com/" onclick="home()"><span>Home</span></a></li>
+		            <li><a href="http://www.microsoftlpu.com/#fh5co-about" onclick="about()"><span>About</span></a></li>
+		            <li class="active"><a href="http://www.microsoftlpu.com/#fh5co-gallery" onclick="gallery()"><span>Gallery</span></a></li>
+		            <li><a href="http://www.microsoftlpu.com/#fh5co-testimonials" onclick="ourEvent()"><span>Upcoming Event</span></a></li>
+		            <li><a href="http://www.microsoftlpu.com/team.html" onclick="team()"><span>Team</span></a></li>
+		            <li><a href="http://www.microsoftlpu.com/#fh5co-contact" onclick="contactus()"><span>Contact Us</span></a></li>
 		          </ul>
 		        </div>
 			    </nav>
