added event page

--- a/index.html
+++ b/index.html
@@ -216,6 +216,11 @@ support of Microsoft at back , and your good wishes we wish to energize today's 
                 </div>
             </div>
             <div class="space"></div>
+            <div class="row">
+                <div class="register col-md-12 text-center to-animate">
+                    <a href="microsoft-hackathon.html"><button>Learn More</button></a>
+                </div>
+            </div>
             <!-- <div class="row">
                 <ul class="list-unstyled list-inline to-animate">
                     <li class="col-md-12 col-xs-12 "><i class="fa fa-arrow-circle-right " aria-hidden="true "></i>&nbsp;&nbsp;Version Control with Git &amp; Github (Advanced)</li>
