added sponsors link

--- a/microsoft-hackathon.html
+++ b/microsoft-hackathon.html
@@ -207,7 +207,7 @@
                 <div class="fh5co-person" style="border:none;">
                     <div class="col-md-7">
                         <div class="text-center to-animate">
-                            <h3>..and way to Microsoft Imagine Cup 2018</h3>
+                            <h3>Way to Microsoft Imagine Cup 2018</h3>
                             <p>This Microsoft hackathon opens a path for Microsoft Imagine Cup 2018, Our MSTC team will help in your idea, product so that you can make a place in Imagine cup and represent our university in National final.</p>
                         </div>
                     </div>
@@ -271,16 +271,22 @@
             </div>
             <div class="row text-center sponsors">
                 <div class="col-md-3 col-sm-12">
-                    <img src="images/logo.png" width="250">
+                    <a href="https://www.microsoft.com/" target="_blank"><img src="images/logo.png" width="250"></a>
                 </div>
                 <div class="col-md-3 col-sm-12">
-                    <img src="images/temboo.png" width="230">
+                    <a href="https://www.temboo.com/" target="_blank"><img src="images/temboo.png" width="230"></a>
                 </div>
                 <div class="col-md-3 col-sm-12">
-                    <img src="images/wolfram.png" width="270">
+                    <a href="https://www.wolfram.com/language/" target="_blank"><img src="images/wolfram.png" width="270"></a>
                 </div>
                 <div class="col-md-3 col-sm-12">
-                    <img src="images/jetbrains.png" width="120">
+                    <a href="https://www.wolfram.com/language/" target="_blank"><img src="images/jetbrains.png" width="120"></a>
+                </div>
+            </div>
+            <div class="register col-md-12 text-center to-animate">
+                <div class="col-md-12">
+                    <p><i>Interested in sponsoring?</i></p>
+                    <a href="https://www.sponsormyevent.com/e/j0ma7rNL/" target="_blank"><button>Sponsor Us!</button></a>
                 </div>
             </div>
         </div>
