--- a/microsoft-hackathon.html
+++ b/microsoft-hackathon.html
@@ -106,9 +106,8 @@
             <div class="row">
                 <div class="col-md-12 section-heading text-center to-animate">
                     <h2 class="to-animate">Theme</h2>
-                    <p class="to-animate">Microsoft's Hackathons is a place where many passionate students in Technology and Business Development actively participate - form diverse teams, make their pitches, adds their expertise and work towards creating a solution. It is
-                        one such opportunity where you make many new students from diverse backgrounds whom they would have never met, and learn new things from mentors & teammates. Above all, Hackathon helps you to see a problem from multiple perspectives
-                        and arrive at a solution.
+                    <p class="to-animate">we are organizing a Problem based Hackathon - “Microsoft Hackathon”, A 2-day event with some themes - ‘Combat lifestyle, medical science problem and technology, Education field problem’, where enthusiasts from diverse fields - students,
+                        entrepreneurs, tech geeks, business developers, and many more are coming together to challenge problem and build products or platforms leveraging emerging technologies.
                     </p>
                 </div>
             </div>
