changed title of hackathon page

--- a/microsoft-hackathon.html
+++ b/microsoft-hackathon.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Team MSP &amp; MSTC&mdash;LPU</title>
+    <title>Microsoft Hackathon 1.0 - Microsoft Technical Community</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="MSP - LPU Club" />
     <meta name="keywords" content="microsoft, microsoft student partner, MSP, microsoft technical community, MSTC, MSP-LPU" />
@@ -118,7 +118,9 @@
             </div>
             <div class="row to-animate">
                 <div class="fh5co-person" style="border:none;">
-                    <div class="col-md-5 col-sm-6">
+                    <div class="col-md-5 col-sm-6">Microsoft's Hackathons is a place where many passionate students in Technology and Business Development actively participate - form diverse teams, make their pitches, adds their expertise and work towards creating a solution. It is
+                        one such opportunity where you make many new students from diverse backgrounds whom they would have never met, and learn new things from mentors & teammates. Above all, Hackathon helps you to see a problem from multiple perspectives
+                        and arrive at a solution.
                         <div class="text-center to-animate">
                             <img src="images/team.png" alt="Image" width="400">
                         </div>
