added duration of the event

--- a/index.html
+++ b/index.html
@@ -209,8 +209,8 @@ support of Microsoft at back , and your good wishes we wish to energize today's 
                             <i class="fa fa-bullhorn fa-2x" aria-hidden="true"></i>
                         </div>
                         <div class="col-md-10 to-animate">
-                            <h2>Speaker</h2>
-                            <span>MSP &amp; MSTC Team</span>
+                            <h2>Duration</h2>
+                            <span>36 Hours</span>
                         </div>
                     </div>
                 </div>
