--- a/microsoft-hackathon.html
+++ b/microsoft-hackathon.html
@@ -299,7 +299,7 @@
         <div class="container">
             <div class="">
                 <div class="col-md-12 text-center">
-                    <p><a href="http://www.microsoftlpu.com"> www.microsoftlpu.com</a> <br>&copy; All Rights Reserved. <br>Created by <a href="http://www.linkedin.com/in/rowhitswami/" target="_blank">Microsoft Technical Community, LPU</a></p>
+                    <p><a href="http://www.microsoftlpu.com"> www.microsoftlpu.com</a> <br>&copy; All Rights Reserved. <br>Created by <a href="team.html">Microsoft Technical Community, LPU</a></p>
 
                 </div>
             </div>
