removed animate effect

--- a/microsoft-hackathon.html
+++ b/microsoft-hackathon.html
@@ -95,39 +95,39 @@
     <section id="fh5co-testimonials">
         <div class="container">
             <div class="row">
-                <div class="col-md-12 section-heading text-center to-animate">
-                    <h2 class="to-animate">About</h2>
-                    <p class="to-animate">Microsoft's Hackathons is a place where many passionate students in Technology and Business Development actively participate - form diverse teams, make their pitches, adds their expertise and work towards creating a solution. It is
+                <div class="col-md-12 section-heading text-center  ">
+                    <h2 class=" ">About</h2>
+                    <p class=" ">Microsoft's Hackathons is a place where many passionate students in Technology and Business Development actively participate - form diverse teams, make their pitches, adds their expertise and work towards creating a solution. It is
                         one such opportunity where you make many new students from diverse backgrounds whom they would have never met, and learn new things from mentors & teammates. Above all, Hackathon helps you to see a problem from multiple perspectives
                         and arrive at a solution.
                     </p>
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-12 section-heading text-center to-animate">
-                    <h2 class="to-animate">Theme</h2>
-                    <p class="to-animate">we are organizing a Problem based Hackathon - “Microsoft Hackathon”, A 2-day event with some themes - ‘Combat lifestyle, medical science problem and technology, Education field problem’, where enthusiasts from diverse fields - students,
+                <div class="col-md-12 section-heading text-center  ">
+                    <h2 class=" ">Theme</h2>
+                    <p class=" ">we are organizing a Problem based Hackathon - “Microsoft Hackathon”, A 2-day event with some themes - ‘Combat lifestyle, medical science problem and technology, Education field problem’, where enthusiasts from diverse fields - students,
                         entrepreneurs, tech geeks, business developers, and many more are coming together to challenge problem and build products or platforms leveraging emerging technologies.
                     </p>
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-12 section-heading text-center to-animate">
-                    <h2 class="to-animate">Perks &amp; Benefits</h2>
+                <div class="col-md-12 section-heading text-center  ">
+                    <h2 class=" ">Perks &amp; Benefits</h2>
                 </div>
             </div>
-            <div class="row to-animate">
+            <div class="row  ">
                 <div class="fh5co-person" style="border:none;">
                     <div class="col-md-5 col-sm-6">Microsoft's Hackathons is a place where many passionate students in Technology and Business Development actively participate - form diverse teams, make their pitches, adds their expertise and work towards creating a solution. It is
                         one such opportunity where you make many new students from diverse backgrounds whom they would have never met, and learn new things from mentors & teammates. Above all, Hackathon helps you to see a problem from multiple perspectives
                         and arrive at a solution.
-                        <div class="text-center to-animate">
+                        <div class="text-center  ">
                             <img src="images/team.png" alt="Image" width="400">
                         </div>
                     </div>
                     <div class="space"></div>
                     <div class="col-md-7 col-sm-6">
-                        <div class="text-center to-animate">
+                        <div class="text-center  ">
                             <h3 class="text-center">Team Collaboration</h3>
                             <p class="text-center">You are put in a situation where you work intensely with those new people you meet, for many consecutive hours in a short period of time, making it all quite intense. Everyone is working towards the same goal. You very often
                                 create strong bonds, learn from other’s strengths and learn how to work with a team that you don’t already know and with who you’ve never worked before, where high communication skills will be key.</p>
@@ -135,10 +135,10 @@
                     </div>
                 </div>
             </div>
-            <div class="row to-animate">
+            <div class="row  ">
                 <div class="fh5co-person" style="border:none;">
                     <div class="col-md-7">
-                        <div class="text-center to-animate">
+                        <div class="text-center  ">
                             <h3>Meet New People</h3>
                             <p>It’s a great opportunity to get to know others that have the same interests as you and that care about the same technologies. Basically, it’s a place where you get the chance to work and collaborate on projects with like-minded
                                 people. I won’t go over the benefits of making new connections and networking, but a Hackathon is definitely the right place for that.
@@ -146,22 +146,22 @@
                         </div>
                     </div>
                     <div class="col-md-5">
-                        <div class="text-center to-animate">
+                        <div class="text-center  ">
                             <img src="images/people.png" alt="Image" width="300">
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="row to-animate">
+            <div class="row  ">
                 <div class="fh5co-person" style="border:none;">
                     <div class="col-md-5 col-sm-6">
-                        <div class="text-center to-animate">
+                        <div class="text-center  ">
                             <img src="images/cv.png" alt="Image" width="300">
                         </div>
                     </div>
                     <div class="space"></div>
                     <div class="col-md-7 col-sm-6">
-                        <div class="text-center to-animate">
+                        <div class="text-center  ">
                             <h3 class="text-center">Add Value to Your CV</h3>
                             <p class="text-center">This is a great add up to your CV. You will be getting some real tech experience and you can win prizes. People in the field know that during a Hackathon you increase your knowledge and gain team work experience. It Shows a
                                 lot about your personality, a proof that you are a person that takes initiative, seeking to have a deeper knowledge and that enjoys challenges.</p>
@@ -169,32 +169,32 @@
                     </div>
                 </div>
             </div>
-            <div class="row to-animate">
+            <div class="row  ">
                 <div class="fh5co-person" style="border:none;">
                     <div class="col-md-7">
-                        <div class="text-center to-animate">
+                        <div class="text-center  ">
                             <h3>Innovation</h3>
                             <p>Problem solving environments encourage the development of new ideas. You work with people that come from different fields, with different ideas and interest, all working together to solve the same problem, each one adding his
                                 own input. The fact that we are restricted with time increases adrenaline and makes it much more productive.</p>
                         </div>
                     </div>
                     <div class="col-md-5">
-                        <div class="text-center to-animate">
+                        <div class="text-center  ">
                             <img src="images/innovation.png" alt="Image" width="200">
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="row to-animate">
+            <div class="row  ">
                 <div class="fh5co-person" style="border:none;">
                     <div class="col-md-5 col-sm-6">
-                        <div class="text-center to-animate">
+                        <div class="text-center  ">
                             <img src="images/recruitment.png" alt="Image" width="370">
                         </div>
                     </div>
                     <div class="space"></div>
                     <div class="col-md-7 col-sm-6">
-                        <div class="text-center to-animate">
+                        <div class="text-center  ">
                             <h3 class="text-center">Recruiting &amp; finding talent</h3>
                             <p class="text-center">
                                 During the project, in a way, you can see it as if you were testing candidates and identifying new talent for your teams. Do you see any cultural fit? Something you don’t always get to see during a job interview. Here, you can really see how people work
@@ -204,36 +204,36 @@
                     </div>
                 </div>
             </div>
-            <div class="row to-animate">
+            <div class="row  ">
                 <div class="fh5co-person" style="border:none;">
                     <div class="col-md-7">
-                        <div class="text-center to-animate">
+                        <div class="text-center  ">
                             <h3>Way to Microsoft Imagine Cup 2018</h3>
                             <p>This Microsoft hackathon opens a path for Microsoft Imagine Cup 2018, Our MSTC team will help in your idea, product so that you can make a place in Imagine cup and represent our university in National final.</p>
                         </div>
                     </div>
                     <div class="col-md-5">
-                        <div class="text-center to-animate">
+                        <div class="text-center  ">
                             <img src="images/imagine_cup.png" alt="Image" width="400">
                         </div>
                     </div>
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-12 section-heading text-center to-animate">
-                    <h2 class="to-animate">Prerequisites</h2>
+                <div class="col-md-12 section-heading text-center  ">
+                    <h2 class=" ">Prerequisites</h2>
                 </div>
             </div>
-            <div class="row to-animate">
+            <div class="row  ">
                 <div class="fh5co-person" style="border:none;">
                     <div class="col-md-5 col-sm-6">
-                        <div class="text-center to-animate">
+                        <div class="text-center  ">
                             <img src="images/win.png" alt="Image" width="200">
                         </div>
                     </div>
                     <div class="space"></div>
                     <div class="col-md-7 col-sm-6">
-                        <div class="text-center to-animate">
+                        <div class="text-center  ">
                             <h3 class="text-center">You want to win
                             </h3>
                             <p class="text-center">
@@ -243,15 +243,15 @@
                     </div>
                 </div>
             </div>
-            <div class="row to-animate">
+            <div class="row  ">
                 <div class="fh5co-person" style="border:none;">
                     <div class="col-md-7">
-                        <div class="text-center to-animate">
+                        <div class="text-center  ">
                             <h3>You want to have fun</h3>
                             <p>You should have some low-level experience in programming, and furthermore, in application/web design. This will give you the bare-minimum to make at least some sort of mock-up that you can present to the judges, and you can
                                 be proud of it! These skills could include HTML/CSS, JavaScript, Data Structures, Introductory Python/C/Java, possibly Android/iOS/Ionic.</p>
                         </div>
-                        <ul class="list-unstyled list-inline to-animate">
+                        <ul class="list-unstyled list-inline  ">
                             <li class="col-md-12 col-xs-12 "><i class="fa fa-arrow-circle-right " aria-hidden="true "></i>&nbsp;&nbsp;Passion to learn &amp; create new creative things.</li>
                             <li class="col-md-12 col-xs-12 "><i class="fa fa-arrow-circle-right " aria-hidden="true "></i>&nbsp;&nbsp;Having your own system and laptop.</li>
                             <li class="col-md-12 col-xs-12 "><i class="fa fa-arrow-circle-right " aria-hidden="true "></i>&nbsp;&nbsp;Be ready for continues 48 Hour hackathon.</li>
@@ -259,15 +259,15 @@
                         </ul>
                     </div>
                     <div class="col-md-5">
-                        <div class="text-center to-animate">
+                        <div class="text-center  ">
                             <img src="images/fun.png" alt="Image" width="200">
                         </div>
                     </div>
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-12 section-heading text-center to-animate">
-                    <h2 class="to-animate">Sponsors</h2>
+                <div class="col-md-12 section-heading text-center  ">
+                    <h2 class=" ">Sponsors</h2>
                 </div>
             </div>
             <div class="row text-center sponsors">
@@ -284,7 +284,7 @@
                     <a href="https://www.wolfram.com/language/" target="_blank"><img src="images/jetbrains.png" width="120"></a>
                 </div>
             </div>
-            <div class="register col-md-12 text-center to-animate">
+            <div class="register col-md-12 text-center  ">
                 <div class="col-md-12">
                     <p><i>Interested in sponsoring?</i></p>
                     <a href="https://www.sponsormyevent.com/e/j0ma7rNL/" target="_blank"><button>Sponsor Us!</button></a>
