--- a/microsoft-hackathon.html
+++ b/microsoft-hackathon.html
@@ -118,9 +118,7 @@
             </div>
             <div class="row  ">
                 <div class="fh5co-person" style="border:none;">
-                    <div class="col-md-5 col-sm-6">Microsoft's Hackathons is a place where many passionate students in Technology and Business Development actively participate - form diverse teams, make their pitches, adds their expertise and work towards creating a solution. It is
-                        one such opportunity where you make many new students from diverse backgrounds whom they would have never met, and learn new things from mentors & teammates. Above all, Hackathon helps you to see a problem from multiple perspectives
-                        and arrive at a solution.
+                    <div class="col-md-5 col-sm-6">
                         <div class="text-center  ">
                             <img src="images/team.png" alt="Image" width="400">
                         </div>
