added jetbrains link

--- a/microsoft-hackathon.html
+++ b/microsoft-hackathon.html
@@ -279,7 +279,7 @@
                     <a href="https://www.wolfram.com/language/" target="_blank"><img src="images/wolfram.png" width="270"></a>
                 </div>
                 <div class="col-md-3 col-sm-12">
-                    <a href="https://www.wolfram.com/language/" target="_blank"><img src="images/jetbrains.png" width="120"></a>
+                    <a href="https://www.jetbrains.com/" target="_blank"><img src="images/jetbrains.png" width="120"></a>
                 </div>
             </div>
             <div class="register col-md-12 text-center  ">
