Changed few links

--- a/microsoft-hackathon.html
+++ b/microsoft-hackathon.html
@@ -106,7 +106,7 @@
             <div class="row">
                 <div class="col-md-12 section-heading text-center  ">
                     <h2 class=" ">Theme</h2>
-                    <p class=" ">we are organizing a Problem based Hackathon - “Microsoft Hackathon”, A 2-day event with some themes - ‘Combat lifestyle, medical science problem and technology, Education field problem’, where enthusiasts from diverse fields - students,
+                    <p class=" ">We are organizing a Problem based Hackathon - “Microsoft Hackathon”, A 2-day event with some themes - ‘Combat lifestyle, medical science problem and technology, Education field problem’, where enthusiasts from diverse fields - students,
                         entrepreneurs, tech geeks, business developers, and many more are coming together to challenge problem and build products or platforms leveraging emerging technologies.
                     </p>
                 </div>
@@ -297,7 +297,7 @@
         <div class="container">
             <div class="">
                 <div class="col-md-12 text-center">
-                    <p><a href="http://www.microsoftlpu.com"> www.microsoftlpu.com</a> <br>&copy; All Rights Reserved. <br>Created by <a href="team.html">Microsoft Technical Community, LPU</a></p>
+                    <p><a href="http://www.microsoftlpu.com"> www.microsoftlpu.com</a> <br>&copy; All Rights Reserved. <br>Created by <a href="https://www.linkedin.com/company/13422709/">Microsoft Technical Community, LPU</a></p>
 
                 </div>
             </div>
