--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@ support of Microsoft at back , and your good wishes we wish to energize today's 
         <div class="container">
             <div class="">
                 <div class="col-md-12 text-center">
-                    <p><a href="http://www.microsoftlpu.com"> www.microsoftlpu.com</a> <br>&copy; All Rights Reserved. <br>Created by <a href="team.html">Microsoft Technical Community, LPU</a></p>
+                    <p><a href="http://www.microsoftlpu.com"> www.microsoftlpu.com</a> <br>&copy; All Rights Reserved. <br>Created by <a href="https://www.linkedin.com/company/13422709/">Microsoft Technical Community, LPU</a></p>
                 </div>
             </div>
             <div class="row">
@@ -347,7 +347,6 @@ support of Microsoft at back , and your good wishes we wish to energize today's 
                 </div>
             </div>
         </div>
-        <a href="https://msg91.com/startups/?utm_source=startup-banner"><img src="https://msg91.com/images/startups/msg91Badge.png" width="120" height="90" title="MSG91 - SMS for Startups" alt="Bulk SMS - MSG91"></a>
     </footer>
 
 
