--- a/second-event.html
+++ b/second-event.html
@@ -94,7 +94,7 @@ support of Microsoft at back , and your good wishes we wish to energize today's 
                     <h2>Gallery</h2>
                     <div class="row">
                         <div class="col-md-8 col-md-offset-2 subtext">
-                            <h3>Second Event: GitHub workshop]</h3>
+                            <h3>Second Event: GitHub workshop</h3>
                         </div>
                     </div>
                 </div>
