added .tech and hacksociety as sponsors

--- a/microsoft-hackathon.html
+++ b/microsoft-hackathon.html
@@ -282,6 +282,16 @@
                     <a href="https://www.jetbrains.com/" target="_blank"><img src="images/jetbrains.png" width="120"></a>
                 </div>
             </div>
+            <div class="row text-center sponsors">
+                <div class="col-md-3"></div>
+                <div class="col-md-3">
+                    <a href="http://hacksociety.tech/" target="_blank"><img src="images/hacksociety.png" width="170"></a>
+                </div>
+                <div class="col-md-3">
+                    <a href="http://get.tech/" target="_blank"><img src="images/tech.png" width="170"></a>
+                </div>
+                <div class="col-md-3"></div>
+            </div>
             <div class="register col-md-12 text-center  ">
                 <div class="col-md-12">
                     <p><i>Interested in sponsoring?</i></p>
