--- a/microsoft-hackathon.html
+++ b/microsoft-hackathon.html
@@ -288,7 +288,7 @@
                     <a href="http://hacksociety.tech/" target="_blank"><img src="images/hacksociety.png" width="170"></a>
                 </div>
                 <div class="col-md-3">
-                    <a href="http://get.tech/" target="_blank"><img src="images/tech.png" width="170"></a>
+                    <a href="http://get.tech/" target="_blank"><img style="position: relative; top:50px;" src="images/tech.png" width="170"></a>
                 </div>
                 <div class="col-md-3"></div>
             </div>
