added stickermule as sponsponsor

--- a/microsoft-hackathon.html
+++ b/microsoft-hackathon.html
@@ -283,14 +283,15 @@
                 </div>
             </div>
             <div class="row text-center sponsors">
-                <div class="col-md-3"></div>
-                <div class="col-md-3">
+                <div class="col-md-4">
                     <a href="http://hacksociety.tech/" target="_blank"><img src="images/hacksociety.png" width="170"></a>
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-4">
                     <a href="http://get.tech/" target="_blank"><img style="position: relative; top:50px;" src="images/tech.png" width="170"></a>
                 </div>
-                <div class="col-md-3"></div>
+                <div class="col-md-4">
+                    <a href="https://www.stickermule.com/uses/laptop-stickers/" target="_blank"><img src="images/stickermule.png" width="200"></a>
+                </div>
             </div>
             <div class="register col-md-12 text-center  ">
                 <div class="col-md-12">
