--- a/index.html
+++ b/index.html
@@ -93,6 +93,34 @@ support of Microsoft at back , and your good wishes we wish to energize today's 
         <div class="slant"></div>
     </section>
 
+    <!-- <div id="myCarousel" class="carousel slide" data-ride="carousel">
+        <!Carousel indicators -->
+    <!-- <ol class="carousel-indicators">
+            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+            <li data-target="#myCarousel" data-slide-to="1"></li>
+            <li data-target="#myCarousel" data-slide-to="2"></li>
+        </ol> -->
+    <!-- Wrapper for carousel items -->
+    <!-- <div class="carousel-inner">
+            <div class="item active">
+                <img src="images/home-bg.jpg" alt="First Slide">
+            </div>
+            <div class="item">
+                <img src="images/home-bg2.jpg" alt="Second Slide">
+            </div>
+            <div class="item">
+                <img src="images/slide3.png" alt="Third Slide">
+            </div>
+        </div> -->
+    <!-- Carousel controls -->
+    <!-- <a class="carousel-control left" href="#myCarousel" data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left"></span>
+        </a>
+        <a class="carousel-control right" href="#myCarousel" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right"></span>
+        </a>
+    </div> -->
+
     <section id="fh5co-about" data-section="about">
         <div class="container">
             <div class="row to-animate">
