--- a/team.html
+++ b/team.html
@@ -172,12 +172,11 @@
             <div class="row">
                 <div class="col-md-4">
                     <div class="fh5co-person text-center to-animate">
-                        <figure><img src="images/dimple.jpg" alt="Image"></figure>
-                        <h3>Dimple Sharma</h3>
-                        <span class="fh5co-position">Promotion &amp; Management</span>
+                        <figure><img src="images/aditi.png" alt="Image"></figure>
+                        <h3>Aditi Pandey</h3>
+                        <span class="fh5co-position">Data Science</span>
                         <ul class="social social-circle">
-                            <li><a href="https://www.linkedin.com/in/dimple-sharma-ab1162143" target="_blank"><i class="icon-linkedin"></i></a></li>
-                            <li><a href="https://www.facebook.com/profile.php?id=100008260568471" target="_blank"><i class="icon-facebook"></i></a></li>
+                            <li><a href="https://www.linkedin.com/in/aditi-pandey-8516a3148/" target="_blank"><i class="icon-linkedin"></i></a></li>
                         </ul>
                     </div>
                 </div>
