--- a/index.html
+++ b/index.html
@@ -40,9 +40,6 @@ support of Microsoft at back , and your good wishes we wish to energize today's 
 
     <link rel="stylesheet" href="css/style.css">
 
-    <!-- Styleswitcher ( This style is for demo purposes only, you may delete this anytime. ) -->
-    <link rel="stylesheet" id="theme-switch" href="css/style.css">
-
 
     <!-- Modernizr JS -->
     <script src="js/modernizr-2.6.2.min.js"></script>
@@ -87,39 +84,37 @@ support of Microsoft at back , and your good wishes we wish to energize today's 
         </div>
     </header>
 
-    <section id="particles-js" data-section="home" data-stellar-background-ratio="0.5" style="background-image: url(images/home-bg.jpg);">
+    <!-- <section id="particles-js" data-section="home" data-stellar-background-ratio="0.5" style="background-image: url(images/home-bg.jpg);">
         <div class="container">
         </div>
         <div class="slant"></div>
-    </section>
+    </section> -->
 
-    <!-- <div id="myCarousel" class="carousel slide" data-ride="carousel">
-        <!Carousel indicators -->
-    <!-- <ol class="carousel-indicators">
+    <div id="myCarousel" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
             <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
             <li data-target="#myCarousel" data-slide-to="1"></li>
-            <li data-target="#myCarousel" data-slide-to="2"></li>
-        </ol> -->
-    <!-- Wrapper for carousel items -->
-    <!-- <div class="carousel-inner">
+            <!-- <li data-target="#myCarousel" data-slide-to="2"></li> -->
+        </ol>
+        <div class="carousel-inner">
             <div class="item active">
-                <img src="images/home-bg.jpg" alt="First Slide">
+                <img src="images/home1.png" alt="First Slide">
             </div>
             <div class="item">
-                <img src="images/home-bg2.jpg" alt="Second Slide">
+                <img src="images/home2.jpg" alt="Second Slide">
             </div>
-            <div class="item">
-                <img src="images/slide3.png" alt="Third Slide">
-            </div>
-        </div> -->
-    <!-- Carousel controls -->
-    <!-- <a class="carousel-control left" href="#myCarousel" data-slide="prev">
+            <!-- <div class="item">
+                <img src="images/home3.png" alt="Third Slide">
+            </div> -->
+        </div>
+        <!-- Carousel controls -->
+        <a class="carousel-control left" href="#myCarousel" data-slide="prev">
             <span class="glyphicon glyphicon-chevron-left"></span>
         </a>
         <a class="carousel-control right" href="#myCarousel" data-slide="next">
             <span class="glyphicon glyphicon-chevron-right"></span>
         </a>
-    </div> -->
+    </div>
 
     <section id="fh5co-about" data-section="about">
         <div class="container">
