--- a/microsoft-hackathon.html
+++ b/microsoft-hackathon.html
@@ -265,7 +265,7 @@
             </div>
             <div class="row">
                 <div class="col-md-12 section-heading text-center  ">
-                    <h2 class=" ">Sponsors</h2>
+                    <h2 class=" ">Event Sponsors</h2>
                 </div>
             </div>
             <div class="row text-center sponsors">
@@ -291,6 +291,16 @@
                 </div>
                 <div class="col-md-4">
                     <a href="https://www.stickermule.com/uses/laptop-stickers/" target="_blank"><img src="images/stickermule.png" width="200"></a>
+                </div>
+            </div>
+            <div class="row topics">
+                <div class="col-md-12 section-heading text-center to-animate">
+                    <h2 class="to-animate">Platform Sponsor</h2>
+                </div>
+            </div>
+            <div class="row text-center sponsors">
+                <div class="col-md-12">
+                    <a href="https://www.hackerearth.com/" target="_blank"><img src="images/hackerearth.png" width="240"></a>
                 </div>
             </div>
             <div class="register col-md-12 text-center  ">
