--- a/index.html
+++ b/index.html
@@ -103,9 +103,9 @@ support of Microsoft at back , and your good wishes we wish to energize today's 
             <div class="item">
                 <img src="images/home2.jpg" alt="Second Slide">
             </div>
-            <!-- <div class="item">
-                <img src="images/home3.png" alt="Third Slide">
-            </div> -->
+            <div class="item">
+                <img src="images/home3.jpg" alt="Third Slide">
+            </div>
         </div>
         <!-- Carousel controls -->
         <a class="carousel-control left" href="#myCarousel" data-slide="prev">
