--- a/index.html
+++ b/index.html
@@ -94,11 +94,19 @@ support of Microsoft at back , and your good wishes we wish to energize today's 
         <ol class="carousel-indicators">
             <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
             <li data-target="#myCarousel" data-slide-to="1"></li>
-            <!-- <li data-target="#myCarousel" data-slide-to="2"></li> -->
+            <li data-target="#myCarousel" data-slide-to="2"></li>
         </ol>
         <div class="carousel-inner">
             <div class="item active">
                 <img src="images/home1.png" alt="First Slide">
+                <!-- <div class="container" style="margin-top: -250px; padding-bottom: 0px;">
+                    <div class="row">
+                        <div class="col-md-12 text-center">
+                            <h6 class="hackathon-subheading2">Lovely Professional University</h6>
+                        </div>
+                    </div>
+                </div> -->
+
             </div>
             <div class="item">
                 <img src="images/home2.jpg" alt="Second Slide">
@@ -324,25 +332,32 @@ support of Microsoft at back , and your good wishes we wish to energize today's 
                 </div>
                 <div class="col-md-6 to-animate">
                     <h3>Contact Form</h3>
-                    <div class="form-group ">
-                        <label for="name" class="sr-only">Name</label>
-                        <input id="name" class="form-control" placeholder="Name" type="text">
-                    </div>
-                    <div class="form-group ">
-                        <label for="email" class="sr-only">Email</label>
-                        <input id="email" class="form-control" placeholder="Email" type="email">
-                    </div>
-                    <div class="form-group ">
-                        <label for="phone" class="sr-only">Phone</label>
-                        <input id="phone" class="form-control" placeholder="Phone" type="text">
-                    </div>
-                    <div class="form-group ">
-                        <label for="message" class="sr-only">Message</label>
-                        <textarea name="" id="message" cols="30" rows="5" class="form-control" placeholder="Message"></textarea>
-                    </div>
-                    <div class="form-group ">
-                        <input class="btn btn-primary btn-lg" value="Send Message" type="submit">
-                    </div>
+                    <form class="center-block g-width-500--sm g-width-550--md" name="sentMessage" id="contactForm" novalidate>
+                        <div class="row">
+                            <div class="form-group g-margin-b-30--xs">
+                                <input type="text" class="form-control s-form-v3__input" placeholder="Your Name *" id="name" required data-validation-required-message="Please enter your name.">
+                                <p class="help-block text-danger"></p>
+                            </div>
+                            <div class="form-group g-margin-b-30--xs">
+                                <input type="email" class="form-control s-form-v3__input" placeholder="Your Email *" id="email" required data-validation-required-message="Please enter your email address.">
+                                <p class="help-block text-danger"></p>
+                            </div>
+                            <div class="form-group g-margin-b-30--xs">
+                                <input type="tel" class="form-control s-form-v3__input" placeholder="Your Phone *" id="phone" data-validation-required-message="Please enter your phone number.">
+                                <p class="help-block text-danger"></p>
+                            </div>
+                            <div class="form-group g-margin-b-30--xs">
+                                <textarea class="form-control s-form-v3__input" rows="5" placeholder="Your Message *" id="message" required data-validation-required-message="Please enter a message."></textarea>
+                                <p class="help-block text-danger"></p>
+                            </div>
+                            <div class="clearfix"></div>
+                            <div class="col-lg-12 text-center">
+                                <div id="success"></div>
+                                <button type="submit" class="text-uppercase s-btn s-btn--md s-btn--white-bg g-radius--50 g-padding-x-70--xs g-margin-b-20--xs">Send Message</button>
+                            </div>
+                        </div>
+                    </form>
+
                 </div>
             </div>
         </div>
@@ -395,10 +410,12 @@ support of Microsoft at back , and your good wishes we wish to energize today's 
     <script src="js/particles.js "></script>
     <script src="js/app.js "></script>
 
+
     <script src="https://use.fontawesome.com/ec9198a6e3.js "></script>
 
     <!-- Main JS (Do not remove) -->
     <script src="js/main.js "></script>
+    <script src="js/jqBootstrapValidation.js"></script>
 
 </body>
 
