--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@ support of Microsoft at back , and your good wishes we wish to energize today's 
                             <i class="icon-home"></i> Lovely Professional University, <br>Phagwara, Punjab, IN
                         </li>
                         <li><i class="icon-phone"></i> +91-8059459498</li>
-                        <li><i class="icon-envelope"></i><a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="c1a8afa7ae81aca8a2b3aeb2aea7b5adb1b4efa2aeac">[email&#160;protected]</a></li>
+                        <li><i class="icon-envelope"></i><a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="c1a8afa7ae81aca8a2b3aeb2aea7b5adb1b4efa2aeac">info@microsoftlpu.com</a></li>
                         <li><i class="icon-globe"></i> <a href="http://www.microsoftlpu.com/" target="_blank">www.microsoftlpu.com</a></li>
                     </ul>
                 </div>
