--- a/index.html
+++ b/index.html
@@ -415,6 +415,7 @@ support of Microsoft at back , and your good wishes we wish to energize today's 
 
     <!-- Main JS (Do not remove) -->
     <script src="js/main.js "></script>
+    <script src="js/contact.js"></script>
     <script src="js/jqBootstrapValidation.js"></script>
 
 </body>
