--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@ support of Microsoft at back , and your good wishes we wish to energize today's 
 			</div> -->
             <div class="row">
                 <div class="register col-md-12 text-center to-animate">
-                    <a href="https://shortto.com/lpu/" target="_blank"><button>Register Now!</button></a>
+                    <a href="https://mshacks.hackerearth.com/" target="_blank"><button>Register Now!</button></a>
                 </div>
             </div>
         </div>
