--- a/index.html
+++ b/index.html
@@ -334,30 +334,26 @@ support of Microsoft at back , and your good wishes we wish to energize today's 
                 </div>
                 <div class="col-md-6 to-animate">
                     <h3>Contact Form</h3>
-                    <form class="center-block g-width-500--sm g-width-550--md" name="sentMessage" id="contactForm" novalidate>
-                        <div class="row">
-                            <div class="form-group g-margin-b-30--xs">
-                                <input type="text" class="form-control s-form-v3__input" placeholder="Your Name *" id="name" required data-validation-required-message="Please enter your name.">
-                                <p class="help-block text-danger"></p>
-                            </div>
-                            <div class="form-group g-margin-b-30--xs">
-                                <input type="email" class="form-control s-form-v3__input" placeholder="Your Email *" id="email" required data-validation-required-message="Please enter your email address.">
-                                <p class="help-block text-danger"></p>
-                            </div>
-                            <div class="form-group g-margin-b-30--xs">
-                                <input type="tel" class="form-control s-form-v3__input" placeholder="Your Phone *" id="phone" data-validation-required-message="Please enter your phone number.">
-                                <p class="help-block text-danger"></p>
-                            </div>
-                            <div class="form-group g-margin-b-30--xs">
-                                <textarea class="form-control s-form-v3__input" rows="5" placeholder="Your Message *" id="message" required data-validation-required-message="Please enter a message."></textarea>
-                                <p class="help-block text-danger"></p>
-                            </div>
-                            <div class="clearfix"></div>
-                            <div class="col-lg-12 text-center">
-                                <div id="success"></div>
-                                <button type="submit" class="text-uppercase s-btn s-btn--md s-btn--white-bg g-radius--50 g-padding-x-70--xs g-margin-b-20--xs">Send Message</button>
-                            </div>
+                    <form action="https://www.enformed.io/YOUR_TOKEN" method="POST">
+                        <div class="form-group">
+                            <label>Name</label>
+                            <input name="first_name" type="text" class="form-control" />
                         </div>
+
+                        <div class="form-group">
+                            <label>Your car</label>
+                            <select name="car" class="form-control" />
+                            <option value="Honda" class="form-control" />Honda</option>
+                            <option value="Subaru" class="form-control" />Subaru</option>
+                            <option value="Toyota" class="form-control" />Toyota</option>
+                            </select>
+                        </div>
+
+                        <div class="form-group">
+                            <label>Your message</label>
+                            <textarea name="message" type="text" class="form-control" /></textarea>
+                        </div>
+                        <button type="submit" class="btn btn-default">Submit Me</button>
                     </form>
 
                 </div>
