commented particles js

--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@ support of Microsoft at back , and your good wishes we wish to energize today's 
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCNuHy89eyPeeFK_fXVKIV7wzavokkUqmA&callback=initMap " async defer></script>
     <script src="js/google_map.js "></script>
     <!-- Particles.js -->
-    <script src="js/particles.js "></script>
+    <!-- <script src="js/particles.js "></script> -->
     <script src="js/app.js "></script>
 
 
