added ccd as sponsor

--- a/microsoft-hackathon.html
+++ b/microsoft-hackathon.html
@@ -264,6 +264,11 @@
                 </div>
             </div>
             <div class="row">
+                <div class="register col-md-12 text-center to-animate">
+                    <a href="https://mshacks.hackerearth.com/" target="_blank"><button>Register Now!</button></a>
+                </div>
+            </div>
+            <div class="row">
                 <div class="col-md-12 section-heading text-center  ">
                     <h2 class=" ">Event Sponsors</h2>
                 </div>
@@ -283,14 +288,17 @@
                 </div>
             </div>
             <div class="row text-center sponsors">
-                <div class="col-md-4">
+                <div class="col-md-3">
                     <a href="http://hacksociety.tech/" target="_blank"><img src="images/hacksociety.png" width="170"></a>
                 </div>
-                <div class="col-md-4">
-                    <a href="http://get.tech/" target="_blank"><img style="position: relative; top:50px;" src="images/tech.png" width="170"></a>
+                <div class="col-md-3">
+                    <a href="http://get.tech/" target="_blank"><img class="get-sponsor" src="images/tech.png" width="170"></a>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-3">
                     <a href="https://www.stickermule.com/uses/laptop-stickers/" target="_blank"><img src="images/stickermule.png" width="200"></a>
+                </div>
+                <div class="col-md-3">
+                    <a href="https://www.cafecoffeeday.com/" target="_blank"><img src="images/ccd.png" width="150"></a>
                 </div>
             </div>
             <div class="row topics">
