--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ support of Microsoft at back , and your good wishes we wish to energize today's 
         </ol>
         <div class="carousel-inner">
             <div class="item active">
-                <img src="images/home1.png" alt="First Slide">
+                <a href="https://mshacks.hackerearth.com/" target="_blank"><img src="images/home1.png" alt="First Slide"></a>
                 <!-- <div class="container" style="margin-top: -250px; padding-bottom: 0px;">
                     <div class="row">
                         <div class="col-md-12 text-center">
@@ -114,10 +114,10 @@ support of Microsoft at back , and your good wishes we wish to energize today's 
 
             </div>
             <div class="item">
-                <img src="images/home2.jpg" alt="Second Slide">
+                <a href="https://mshacks.hackerearth.com/" target="_blank"><img src="images/home2.jpg" alt="Second Slide"></a>
             </div>
             <div class="item">
-                <img src="images/home3.jpg" alt="Third Slide">
+                <a href="https://mshacks.hackerearth.com/" target="_blank"><img src="images/home3.jpg" alt="Third Slide"></a>
             </div>
         </div>
         <!-- Carousel controls -->
