--- a/index.html
+++ b/index.html
@@ -22,6 +22,14 @@ support of Microsoft at back , and your good wishes we wish to energize today's 
     <meta name="twitter:url" content="" />
     <meta name="twitter:card" content="" />
 
+    <!--PWA Code-->
+    <link rel="apple-touch-icon" sizes="180x180" href="images/pwa/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="images/pwa/android-icon-192x192.png">
+    <link rel="manifest" href="/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="images/pwa/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
+
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <link rel="shortcut icon" href="images/favicon.ico">
 
