--- a/index.html
+++ b/index.html
@@ -429,6 +429,22 @@ support of Microsoft at back , and your good wishes we wish to energize today's 
     <!-- Main JS (Do not remove) -->
     <script src="js/main.js "></script>
 
+    <script type="text/javascript">
+        //This is the "Offline copy of pages" service worker
+
+        //Add this below content to your HTML page, or add the js file to your page at the very top to register sercie worker
+        if (navigator.serviceWorker.controller) {
+            console.log('[PWA Builder] active service worker found, no need to register')
+        } else {
+            //Register the ServiceWorker
+            navigator.serviceWorker.register('pwabuilder-sw.js', {
+                scope: './'
+            }).then(function(reg) {
+                console.log('Service worker has been registered for scope:' + reg.scope);
+            });
+        }
+    </script>
+
 </body>
 
 </html>
