added android icon

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@ support of Microsoft at back , and your good wishes we wish to energize today's 
     <link rel="apple-touch-icon" sizes="180x180" href="images/pwa/apple-icon-180x180.png">
     <link rel="icon" type="image/png" sizes="192x192" href="images/pwa/android-icon-192x192.png">
     <link rel="manifest" href="/manifest.json">
-    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileColor" content="#566a8f">
     <meta name="msapplication-TileImage" content="images/pwa/ms-icon-144x144.png">
-    <meta name="theme-color" content="#ffffff">
+    <meta name="theme-color" content="#566a8f">
 
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <link rel="shortcut icon" href="images/favicon.ico">
